--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>College search</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./style/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
+
 <body>
-    <h1>college Search</h1>
+    <!-- <h1>colloge Search</h1> -->
+    <div class="gradient">
+        <img class="headerback" src="./static/12.png" alt="main image" />
+        <div class="navbar">
+            <div class="left-navber">
+                <!-- <img src="./static/4.png" alt="" /> -->
+                <ul>
+                    <li>Top University</li>
+                    <li>Exams</li>
+                    <li>Reviews</li>
+                    <li>admissions</li>
+                </ul>
+            </div>
+            <div class="right-navber">
+                <div class="login">
+                    <img #login src="./static/" alt="login img" />
+                    <h3>Login</h3>
+                </div>
+                <div class="register">
+                    <img #register src="./static/" alt="registering img" />
+                    <h3>Register</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="mainhomepage">
+            <div class="mainflex">
+                <div class="leftmain">
+                    <div class="selectgoals">
+                        <h3>Select Goals</h3>
+                        <img src="./static/" alt="goals" />
+                    </div>
+                    <div class="maintitie" id="titlem">
+                        <h1>College Search</h1>
+                        <h4>find the best college for you</h4>
+                    </div>
+                    <div class="searchbar">
+                        <input type="text" name="searchbar" placeholder="Search the best college" />
+                    </div>
+                </div>
+                <div class="rightmian">
+                    <img src="./static/5.png" alt="main imgage of the site" />
+                </div>
+            </div>
+            <div class="councelling">
+                <h3>Need councelling</h3>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
