--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <img class="headerback" src="./static/12.png" alt="main image" />
         <div class="navbar">
             <div class="left-navber">
-                <!-- <img src="./static/4.png" alt="" /> -->
+                <img src="./static/logo.png" alt="" />
                 <ul>
                     <li>Top University</li>
                     <li>Exams</li>
                     <li>Reviews</li>
-                    <li>admissions</li>
+                    <li>Admissions</li>
                 </ul>
             </div>
             <div class="right-navber">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="maintitie" id="titlem">
                         <h1>College Search</h1>
-                        <h4>find the best college for you</h4>
+                        <h4>Find the best college for you</h4>
                     </div>
                     <div class="searchbar">
                         <input type="text" name="searchbar" placeholder="Search the best college" />
@@ -62,6 +62,106 @@
                 <h3>Need councelling</h3>
             </div>
         </div>
+    </div>
+
+    <div class="moreabout">
+
+        <div class="courses">
+            <div class="courses-heading">
+                <h2>Select your study goal</h2>
+            </div>
+            <div class="courses-cards">
+                <!-- --------cards-------- -->
+                <div class="card">
+                    <div class="card-title">
+                        <div class="logo">
+                            <img src="./static/5.png" alt="">
+                        </div>
+                        <div class="course-title">
+                            <h3>Engineering</h3>
+                            <h4>XXXX Colleges</h4>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>B.E/ B-Tech</li>
+                        <hr>
+                        <li>Diploma in Engineering</li>
+                        <hr>
+                        <li>M.E / M-Tech</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <div class="card-title">
+                        <div class="logo">
+                            <img src="./static/5.png" alt="">
+                        </div>
+                        <div class="course-title">
+                            <h3>Engineering</h3>
+                            <h4>XXXX Colleges</h4>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>B.E/ B-Tech</li>
+                        <hr>
+                        <li>Diploma in Engineering</li>
+                        <hr>
+                        <li>M.E / M-Tech</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <div class="card-title">
+                        <div class="logo">
+                            <img src="./static/5.png" alt="">
+                        </div>
+                        <div class="course-title">
+                            <h3>Engineering</h3>
+                            <h4>XXXX Colleges</h4>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>B.E/ B-Tech</li>
+                        <hr>
+                        <li>Diploma in Engineering</li>
+                        <hr>
+                        <li>M.E / M-Tech</li>
+                    </ul>
+                </div>
+                <!-- --------cards end-------- -->
+            </div>
+        </div>
+
+
+
+        <div class="courses">
+            <div class="courses-heading">
+                <h2>Top Study Places</h2>
+            </div>
+            <div class="courses-cards">
+                <!-- --------cards-------- -->
+                <div class="card">
+                    <div class="card-title">
+                        <div class="logo">
+                            <img src="./static/5.png" alt="">
+                        </div>
+                        <div class="course-title">
+                            <h3>Engineering</h3>
+                            <h4>XXXX Colleges</h4>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>B.E/ B-Tech</li>
+                        <hr>
+                        <li>Diploma in Engineering</li>
+                        <hr>
+                        <li>M.E / M-Tech</li>
+                    </ul>
+                </div>
+                <!-- --------cards end-------- -->
+            </div>
+        </div>
+
     </div>
 </body>
 
